

ADD_DEFINITIONS(-DMATLAB_MEX_FILE)

# use FindMatlab module in current working directory

SET( CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR} )

FIND_PACKAGE( Matlab REQUIRED /Applications)

INCLUDE_DIRECTORIES( ${MATLAB_INCLUDE_DIR} ${MOOS_INCLUDE_DIRS} ${MOOS_DEPEND_INCLUDE_DIRS} )


IF(WIN32)
	SET(IMATLAB_SRCS
			iMatlab.cpp
			mexVNLHelpers.cpp
			mexVNLHelpers.h
			iMatlab.def
			iMatlab.help
	   )
ELSE(WIN32)
	SET(IMATLAB_SRCS
			iMatlab.cpp
			mexVNLHelpers.cpp
			mexVNLHelpers.h)
ENDIF(WIN32)


SET( CMAKE_CXX_FLAGS ${MATLAB_CXX_FLAGS} )
LINK_DIRECTORIES(${MATLAB_LIBRARY_DIR})
ADD_LIBRARY(iMatlab MODULE ${IMATLAB_SRCS})
MESSAGE(STATUS ${MATLAB_MEXFILE_SUFFIX})




TARGET_LINK_LIBRARIES( iMatlab ${MATLAB_MEX_LIBRARY}  ${MOOS_LIBRARIES} ${MOOS_DEPEND_LIBRARIES} )
SET_TARGET_PROPERTIES(iMatlab PROPERTIES
    PREFIX ""
    SUFFIX  "${MATLAB_MEX_SUFFIX}"
)



